--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,4 +15,12 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="86dp"
+        android:layout_height="42dp"
+        android:text="Click"
+        tools:layout_editor_absoluteX="162dp"
+        tools:layout_editor_absoluteY="280dp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
